// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search - Mobile Snapshots > matches snapshot on mobile viewport 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="true"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    data-testid="search-header"
  >
    SearchHeader
  </div>
  <div
    data-cy="post-search-results"
    data-testid="container"
  >
    <div
      data-testid="timeline-feed"
      data-variant="search"
    >
      TimelineFeed
    </div>
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with an invalid query 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="true"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <p
    class="text-base font-medium text-muted-foreground"
    data-testid="search-invalid-query"
    role="alert"
  >
    Search can contain up to 4 terms
  </p>
  <div
    data-testid="search-empty-state"
  >
    SearchEmptyState
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with full-text results 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="false"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    data-query="bitcoin wallet"
    data-testid="search-header"
  >
    SearchHeader
  </div>
  <div
    data-cy="post-search-results"
    data-testid="container"
  >
    <div
      data-testid="timeline-feed"
      data-variant="search"
    >
      TimelineFeed
    </div>
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with no tags 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="true"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    data-testid="search-empty-state"
  >
    SearchEmptyState
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with tags present 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="false"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    data-testid="search-header"
  >
    SearchHeader
  </div>
  <div
    data-cy="post-search-results"
    data-testid="container"
  >
    <div
      data-testid="timeline-feed"
      data-variant="search"
    >
      TimelineFeed
    </div>
  </div>
</div>
`;
